resize h and supr margin/padding of section

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <section class="section-technique">
       <div class="technique">
         <div class="ficheTech">
-          <h2 class="technique-title">Fiche technique</h2>
+          <h2>Fiche technique</h2>
           <div class="technique-flexbox">
             <div class="technique-title-caract">Longueur hors tout</div>
             <div class="technique-title-number">6,64m</div>
