--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         alt="logo-arch-e-mede"
         src="img/LogoArchiBlack2.png"
       />
-      <a class="buy-button" href="#order"><span>ORDER NOW</span></a>
+      <button class="buy-button">
+        <a href="#order">ORDER NOW</a>
+      </button>
       <div class="header-wrapper">
         <nav id="menu" class="menu">
           <ul class="menu-list open-close">
