--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <a class="lien-menu" href="#order">Commander</a>
             </li>
             <li class="menu-items">
-              <a class="lien-menu" href="#article">Actualités</a>
+              <a class="lien-menu" href="#article">News</a>
             </li>
           </ul>
           <div id="open-menu" class="open-menu open-close">
