add back menu icone

--- a/article1.html
+++ b/article1.html
@@ -15,6 +15,15 @@
   </head>
   <body>
     <article>
+      <div>
+        <a class="lienFleche" href="index.html">
+          <img
+            class="iconeFleche"
+            src="/img/back-button.png"
+            alt="Icone retour"
+            title="Retour à la page principale"
+        /></a>
+      </div>
       <section>
         <h1>
           Quel est l’impact actuel des gros navires de fret sur l’environnement
