add back menu icone

--- a/article2.html
+++ b/article2.html
@@ -15,6 +15,15 @@
 
   <body>
     <section class="article2">
+      <div>
+        <a class="lienFleche" href="index.html">
+          <img
+            class="iconeFleche"
+            src="/img/back-button.png"
+            alt="Icone retour"
+            title="Retour à la page principale"
+        /></a>
+      </div>
       <div class="article2-contenu">
         <h1 class="article2-title">
           Tesla ne cesse d’innover
