--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 
             <span class="article-head">Fret maritime et pollution</span>
             <span class="article-description"
-              >Le poids du fret maritime est sans cesse croissant sur la
+              >L'impact du fret maritime en sans cesse croissance sur la
               pollution mondiale</span
             >
             <button class="article-link">
