bouton order header

--- a/index.html
+++ b/index.html
@@ -30,11 +30,14 @@
       <button class="buy-button">
         <a href="#order">ORDER NOW</a>
       </button>
+      <button class="buy-button-header">
+        <a href="#order">ORDER NOW</a>
+      </button>
       <div class="header-wrapper">
         <nav id="menu" class="menu">
           <ul class="menu-list open-close">
             <li class="menu-items">
-              <a class="lien-menu" href="#">Description</a>
+              <a class="lien-menu" href="#description">Description</a>
             </li>
             <li class="menu-items">
               <a class="lien-menu" href="#techno">Technologie</a>
