--- a/index.html
+++ b/index.html
@@ -30,11 +30,14 @@
       <button class="buy-button">
         <a href="#order">ORDER NOW</a>
       </button>
+      <button class="buy-button-header">
+        <a href="#order">ORDER NOW</a>
+      </button>
       <div class="header-wrapper">
         <nav id="menu" class="menu">
           <ul class="menu-list open-close">
             <li class="menu-items">
-              <a class="lien-menu" href="#">Description</a>
+              <a class="lien-menu" href="#description">Description</a>
             </li>
             <li class="menu-items">
               <a class="lien-menu" href="#techno">Technologie</a>
@@ -112,6 +115,7 @@
           satellite et un sonar, pour une sécurité optimale. Le contrôle à
           distance d'Arch-e-mede est disponible par smartphone via l’application
           Tesla.
+
         </p>
       </div>
       <div class="techno-wrapper">
@@ -120,9 +124,11 @@
         </div>
         <p class="techno-text">
           La véritable innovation de ce bateau se cache sous sa coque.
+
           Arch-e-mede est doté d’une technologie hydraulique permettant de créer
           de l'énergie même à l'arrêt, et par conséquent de recharger les
           batteries au gré de la navigation et des courants.
+
         </p>
       </div>
     </section>
@@ -298,14 +304,14 @@
       <div class="article-presentation-conteneur">
         <span class="article-news">NEWS</span>
         <span class="suiv">suiv ></span>
-        <span class="prec">< Préc</span>
+        <span class="prec"><Préc</span>
         <div class="article-here">
           <div class="article-presentation-content">
             <img class="article-presentation-image" src="img/cargo.jpg" />
 
             <span class="article-head">Fret maritime et pollution</span>
             <span class="article-description"
-              >Le poids du fret maritime est sans cesse croissant sur la
+              >L'impact du fret maritime en sans cesse croissance sur la
               pollution mondiale</span
             >
             <button class="article-link">
