--- a/article2.html
+++ b/article2.html
@@ -120,9 +120,9 @@
           Les Chiffres parlent d'eux-mêmes
         </h3>
         <ul>
-          <li>17% ont pris la version à $98.990</li>
-          <li>41% ont pris la version à $102.220</li>
-          <li>42% ont pris la version à $299.999</li>
+          <li>17% ont pris la version à 149.990€</li>
+          <li>41% ont pris la version à 159.990€</li>
+          <li>42% ont pris la version à 169.990€</li>
         <ul>
         <h3 class="article2-secondary-title ">
           Une nouvelle-ère
