--- a/index.html
+++ b/index.html
@@ -22,11 +22,7 @@
   </head>
   <body>
     <header id="up">
-      <img
-        class="logo-arch"
-        alt="logo-arch-e-mede"
-        src="img/logoarchimede.png"
-      />
+      <img class="logo-arch" alt="logo-arch-e-mede" src="img/logoarche.png" />
       <button class="buy-button">
         <a href="#order">ORDER NOW</a>
       </button>
@@ -60,7 +56,7 @@
       </div>
     </header>
     <section class="description" id="description">
-      <p class="description-text text-design">Design Futuriste</p>
+      <h1 class="description-text text-design">Design Futuriste</h1>
       <div class="description-image image-design">
         <img
           class="description-image-content"
@@ -68,7 +64,7 @@
           src="img/description-design2.png"
         />
       </div>
-      <p class="description-text text-noise">Silencieux</p>
+      <h1 class="description-text text-noise">Silencieux</h1>
       <div class="description-image image-noise">
         <img
           class="description-image-content"
@@ -76,7 +72,7 @@
           src="img/description-noise.jpg"
         />
       </div>
-      <p class="description-text text-eco">100% ecologique</p>
+      <h1 class="description-text text-eco">100% ecologique</h1>
     </section>
     <section class="techno" id="techno">
       <div class="techno-wrapper">
