--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <link rel="stylesheet" href="css/ficheTech.css" />
     <link rel="stylesheet" href="css/article-link.css" />
     <title>Tesla arch-E-mede</title>
-    <script defer type="text/javascript" src="js/header.js"></script>
   </head>
   <body>
     <header id="up">
@@ -301,7 +300,7 @@
               pollution mondiale</span
             >
             <button class="article-link">
-              <a href="article1.html" target="blank">LIRE</a>
+              <a href="article1.html">LIRE</a>
             </button>
           </div>
         </div>
@@ -318,7 +317,7 @@
               Click n' Boat & Taxi Boat</span
             >
             <button class="article-link">
-              <a href="article2.html" target="blank">LIRE</a>
+              <a href="article2.html">LIRE</a>
             </button>
           </div>
         </div>
@@ -368,6 +367,7 @@
         </a>
       </div>
     </footer>
+    <script type="text/javascript" src="js/header.js"></script>
     <script type="text/javascript" src="JS/form.js"></script>
     <script type="text/javascript" src="JS/article.js"></script>
   </body>
