--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/techno.css" />
     <link rel="stylesheet" href="css/ficheTech.css" />
     <link rel="stylesheet" href="css/article-link.css" />
+    <link rel="stylesheet" href="css/transitions-mobile.css" />
     <title>Tesla arch-E-mede</title>
   </head>
   <body>
@@ -55,31 +56,31 @@
       </div>
     </header>
     <section class="description" id="description">
-      <h1 class="description-text text-design">Design Futuriste</h1>
+      <h1 class="description-text text-design move">Design Futuriste</h1>
       <div class="description-image image-design">
         <img
-          class="description-image-content"
+          class="description-image-content move"
           alt="arch-e-mede"
           src="img/description-design2.png"
         />
       </div>
-      <h1 class="description-text text-noise">Silencieux</h1>
+      <h1 class="description-text text-noise move">Silencieux</h1>
       <div class="description-image image-noise">
         <img
-          class="description-image-content"
+          class="description-image-content move"
           alt="arche-e-mede"
           src="img/description-noise.jpg"
         />
       </div>
-      <h1 class="description-text text-eco">100% ecologique</h1>
+      <h1 class="description-text text-eco move">100% ecologique</h1>
     </section>
     <section class="techno" id="techno">
       <div class="techno-wrapper">
-        <div class="techno-image">
+        <div class="techno-image move">
           <img class="techno-image-content" src="img/solaire.png" alt="" />
         </div>
 
-        <p class="techno-text">
+        <p class="techno-text move">
           <span class="pTitle">Energie Solaire</span> <br /><br />
           Malgré son apparence, Arch-e-mede est bien composé de panneaux
           solaires placés à l’avant du bateau sous une couche de peinture. Ces
@@ -88,14 +89,14 @@
         </p>
       </div>
       <div class="techno-wrapper">
-        <div class="techno-image">
+        <div class="techno-image move">
           <img
             class="techno-image-content"
             src="img/boatautopilot.jpg"
             alt=""
           />
         </div>
-        <p class="techno-text">
+        <p class="techno-text move">
           <span class="pTitle">Autopilote</span><br /><br />
           Arch-e-mede est doté de la dernière version d’autopilotage Tesla. Elle
           combine plusieurs caméras offrant une vision à 360°, mais aussi un GPS
@@ -105,10 +106,10 @@
         </p>
       </div>
       <div class="techno-wrapper">
-        <div class="techno-image">
+        <div class="techno-image move">
           <img class="techno-image-content" src="img/turbine.png" alt="" />
         </div>
-        <p class="techno-text">
+        <p class="techno-text move">
           <span class="pTitle">Energie hydrolique</span><br /><br />
           La véritable innovation de ce bateau se cache sous sa coque.
           Arch-e-mede est doté d’une technologie hydraulique permettant de créer
@@ -119,7 +120,7 @@
     </section>
     <section class="section-technique">
       <div class="technique">
-        <div class="ficheTech">
+        <div class="ficheTech move">
           <h2>Fiche technique</h2>
           <div class="technique-flexbox">
             <div class="technique-title-caract">Longueur hors tout</div>
@@ -173,7 +174,7 @@
         </div>
       </div>
     </section>
-    <section class="form-section" id="order">
+    <section class="form-section move" id="order">
       <div class="form-overlay">
         <p class="alert-ok">
           <span>Merci de votre commande</span>
@@ -183,7 +184,7 @@
         </p>
       </div>
       <form>
-        <h1>PRECOMMANDE</h1>
+        <h1 class="titre-commande">PRECOMMANDE</h1>
         <div class="info-perso">
           <h2>Vos informations</h2>
 
@@ -286,7 +287,7 @@
       </div>
     </section>
     <section id="article">
-      <div class="article-presentation-conteneur">
+      <div class="article-presentation-conteneur move">
         <span class="article-news">NEWS</span>
         <span class="suiv">suiv ></span>
         <span class="prec"> < Préc</span>
@@ -370,5 +371,6 @@
     <script type="text/javascript" src="js/header.js"></script>
     <script type="text/javascript" src="JS/form.js"></script>
     <script type="text/javascript" src="JS/article.js"></script>
+    <script type="text/javascript" src="JS/srcolListener.js"></script>
   </body>
 </html>
