--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
       <h1 class="description-text text-eco move">100% ecologique</h1>
     </section>
     <section class="techno" id="techno">
-      <div class="techno-wrapper">
+      <div class="techno-wrapper move">
         <div class="techno-image move">
           <img class="techno-image-content" src="img/solaire.png" alt="" />
         </div>
 
-        <p class="techno-text move">
+        <p class="techno-text ">
           <span class="pTitle">Energie Solaire</span> <br /><br />
           Malgré son apparence, Arch-e-mede est bien composé de panneaux
           solaires placés à l’avant du bateau sous une couche de peinture. Ces
@@ -88,15 +88,15 @@
           non polluante.
         </p>
       </div>
-      <div class="techno-wrapper">
-        <div class="techno-image move">
+      <div class="techno-wrapper move">
+        <div class="techno-image ">
           <img
             class="techno-image-content"
             src="img/boatautopilot.jpg"
             alt=""
           />
         </div>
-        <p class="techno-text move">
+        <p class="techno-text ">
           <span class="pTitle">Autopilote</span><br /><br />
           Arch-e-mede est doté de la dernière version d’autopilotage Tesla. Elle
           combine plusieurs caméras offrant une vision à 360°, mais aussi un GPS
@@ -105,11 +105,11 @@
           Tesla.
         </p>
       </div>
-      <div class="techno-wrapper">
+      <div class="techno-wrapper move">
         <div class="techno-image move">
           <img class="techno-image-content" src="img/turbine.png" alt="" />
         </div>
-        <p class="techno-text move">
+        <p class="techno-text ">
           <span class="pTitle">Energie hydrolique</span><br /><br />
           La véritable innovation de ce bateau se cache sous sa coque.
           Arch-e-mede est doté d’une technologie hydraulique permettant de créer
