--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
           </div>
         </div>
         <div class="caracteristiques">
-          <h2>Puissance du moteur</h2>
+          <h2>Choisir la puissance</h2>
           <div class="select-puissance blur-verif" id="select-puissance">
             <div class="puissance-moteur moteur-selected" data-price="0">
               Single Super Motor - Max 20nds
@@ -286,7 +286,7 @@
         </div>
       </div>
     </section>
-    <section id="article">
+    <section class="section-article" id="article">
       <div class="article-presentation-conteneur move">
         <span class="article-news">NEWS</span>
         <span class="suiv">suiv ></span>
