--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <button class="buy-button-header">
         <a href="#order">PRECOMMANDER</a>
       </button>
+      <span class="slogan">PLUS CHIC, PLUS RAPIDE, PLUS PROPRE</span>
       <div class="header-wrapper">
         <nav id="menu" class="menu">
           <ul class="menu-list open-close">
@@ -121,7 +122,7 @@
     <section class="section-technique">
       <div class="technique">
         <div class="ficheTech move">
-          <h2>Fiche technique</h2>
+          <h2 class="technique-h2">Fiche technique</h2>
           <div class="technique-flexbox">
             <div class="technique-title-caract">Longueur hors tout</div>
             <div class="technique-title-number">6,64m</div>
