--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <h1 class="description-text text-eco move">100% ecologique</h1>
     </section>
     <section class="techno" id="techno">
-      <div class="techno-wrapper move">
+      <div class="techno-wrapper ">
         <div class="techno-image techno-img-1 move">
           <img class="techno-image-content" src="img/solaire.png" alt="" />
         </div>
@@ -89,7 +89,7 @@
           non polluante.
         </p>
       </div>
-      <div class="techno-wrapper move">
+      <div class="techno-wrapper ">
         <div class="techno-image techno-img-2 move ">
           <img
             class="techno-image-content "
@@ -106,7 +106,7 @@
           Tesla.
         </p>
       </div>
-      <div class="techno-wrapper move">
+      <div class="techno-wrapper ">
         <div class="techno-image techno-img-3  move">
           <img class="techno-image-content" src="img/turbine.png" alt="" />
         </div>
