--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </nav>
 
         <a href="#up" class="logo-tesla"
-          ><img alt="logo-tesla" src="img/LOGO-2.png"
+          ><img alt="logo-tesla" src="img/logotesla.png"
         /></a>
       </div>
     </header>
@@ -82,7 +82,7 @@
         </div>
 
         <p class="techno-text techno-text-1 move ">
-          <span class="pTitle">Energie Solaire</span> <br /><br />
+          <span class="pTitle">ENERGIE SOLAIRE</span> <br /><br />
           Malgré son apparence, Arch-e-mede est bien composé de panneaux
           solaires placés à l’avant du bateau sous une couche de peinture. Ces
           panneaux solaires permettent la production d’énergie inépuisable et
@@ -98,7 +98,7 @@
           />
         </div>
         <p class="techno-text techno-text-2 move ">
-          <span class="pTitle">Autopilote</span><br /><br />
+          <span class="pTitle">AUTOPILOTE</span><br /><br />
           Arch-e-mede est doté de la dernière version d’autopilotage Tesla. Elle
           combine plusieurs caméras offrant une vision à 360°, mais aussi un GPS
           satellite et un sonar, pour une sécurité optimale. Le contrôle à
@@ -111,7 +111,7 @@
           <img class="techno-image-content" src="img/turbine.png" alt="" />
         </div>
         <p class="techno-text techno-text-3 move ">
-          <span class="pTitle">Energie hydrolique</span><br /><br />
+          <span class="pTitle">ENERGIE HYDROLIQUE</span><br /><br />
           La véritable innovation de ce bateau se cache sous sa coque.
           Arch-e-mede est doté d’une technologie hydraulique permettant de créer
           de l'énergie même à l'arrêt, et par conséquent de recharger les
@@ -122,7 +122,7 @@
     <section class="section-technique">
       <div class="technique">
         <div class="ficheTech technique-tab move">
-          <h2 class="technique-h2">Fiche technique</h2>
+          <h2 class="technique-h2">FICHE TECHNIQUE</h2>
           <div class="technique-flexbox">
             <div class="technique-title-caract">Longueur hors tout</div>
             <div class="technique-title-number">6,64m</div>
@@ -242,7 +242,7 @@
               <div class="colors-img">
                 <img
                   class="boat-color visible"
-                  src="img/boats-colors/boat_black_logo.png"
+                  src="img/boat_black_color_2.png"
                 />
                 <img
                   class="boat-color"
@@ -270,7 +270,7 @@
         <div class="colors-img">
           <img
             class="boat-color-big visible"
-            src="img/boats-colors/boat_black_logo.png"
+            src="img/boat_black_color_2.png"
           />
           <img
             class="boat-color-big"
