rename all class

--- a/article1.html
+++ b/article1.html
@@ -16,9 +16,9 @@
   <body>
     <article>
       <div>
-        <a class="lienFleche" href="index.html">
+        <a class="lien-fleche" href="index.html">
           <img
-            class="iconeFleche"
+            class="icone-fleche"
             src="/img/back-button.png"
             alt="Icone retour"
             title="Retour à la page principale"
@@ -166,7 +166,7 @@
           Marseille, Toulon et Nice.
         </p>
         <div class="div-cargo">
-          <a class="cargoSolaire" href="img/cargoTesla.jpg"
+          <a class="cargo-solaire" href="img/cargoTesla.jpg"
             ><img
               src="img/cargoTeslaMini.jpg"
               alt="Cargo du futur"
