--- a/article2.html
+++ b/article2.html
@@ -16,9 +16,9 @@
   <body>
     <section class="article2">
       <div>
-        <a class="lienFleche" href="index.html">
+        <a class="lien-fleche" href="index.html">
           <img
-            class="iconeFleche"
+            class="icone-fleche"
             src="/img/back-button.png"
             alt="Icone retour"
             title="Retour à la page principale"
