--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     </section>
     <section class="section-technique">
       <div class="technique">
-        <div class="ficheTech technique-tab move">
+        <div class="fiche-tech technique-tab move">
           <h2 class="technique-h2">Fiche technique</h2>
           <div class="technique-flexbox">
             <div class="technique-title-caract">Longueur hors tout</div>
@@ -184,7 +184,7 @@
           <span>Veuillez saisir votre adresse email.</span>
         </p>
       </div>
-      <form class="formCommande move">
+      <form class="form-commande move">
         <h1 class="titre-commande">PRECOMMANDE</h1>
         <div class="info-perso">
           <h2>Vos informations</h2>
@@ -326,7 +326,7 @@
       </div>
     </section>
     <footer class="footer">
-      <ul class="footerbox">
+      <ul class="footer-box">
         <li>
           <a class="lien" href="https://www.tesla.com/fr_FR/about/legal"
             >Mentions légales</a
@@ -348,21 +348,21 @@
           >
         </li>
       </ul>
-      <div class="footerbox">
+      <div class="footer-box">
         <a
-          class="footerlogo"
+          class="footer-logo"
           href="https://www.instagram.com/teslamotors/?hl=fr"
         >
           <img src="img/logoinsta.png" alt=""
         /></a>
-        <a class="footerlogo" href="https://twitter.com/tesla?lang=fr"
+        <a class="footer-logo" href="https://twitter.com/tesla?lang=fr"
           ><img src="img/logotwitter.png" alt=""
         /></a>
-        <a class="footerlogo" href="https://www.facebook.com/TeslaMoto/"
+        <a class="footer-logo" href="https://www.facebook.com/TeslaMoto/"
           ><img src="img/logofb.png" alt=""
         /></a>
         <a
-          class="footerlogo"
+          class="footer-logo"
           href="https://www.youtube.com/channel/UC5WjFrtBdufl6CZojX3D8dQ"
         >
           <img src="img/logoytb.png" alt="" />
