--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a href="#order">PRECOMMANDER</a>
       </button>
       <button class="buy-button-header">
-        <a href="#order">PRECOMMANDER</a>
+        <a class="button-link" href="#order">PRECOMMANDER</a>
       </button>
       <span class="slogan">PLUS CHIC, PLUS RAPIDE, PLUS PROPRE</span>
       <div class="header-wrapper">
