--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <img class="techno-image-content" src="img/turbine.png" alt="" />
         </div>
         <p class="techno-text techno-text-3 move ">
-          <span class="pTitle">ENERGIE HYDROLIQUE</span><br /><br />
+          <span class="pTitle">ENERGIE HYDRAULIQUE</span><br /><br />
           La véritable innovation de ce bateau se cache sous sa coque.
           Arch-e-mede est doté d’une technologie hydraulique permettant de créer
           de l'énergie même à l'arrêt, et par conséquent de recharger les
