last correction of tha intensive week

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           </div>
 
           <div class="color-choice">
-            <h2>Couleur au choix</h2>
+            <h2>Couleurs au choix</h2>
             <ul class="colors">
               <li class="color-li is-selected">
                 <img class="color-sample " src="img/colors/color-black.png" />
