fixed button issues ans add anim to mail inout

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
   <body>
     <header id="up">
       <img class="logo-arch" alt="logo-arch-e-mede" src="img/logoarche.png" />
-      <button class="buy-button">
-        <a href="#order">PRECOMMANDER</a>
-      </button>
-      <button class="buy-button-header">
-        <a class="button-link" href="#order">PRECOMMANDER</a>
-      </button>
+      <a href="#order" class="buy-button">
+        <button href="#order">PRECOMMANDER</button>
+      </a>
+      <a href="#order" class="buy-button-header">
+        <button class="button-link">PRECOMMANDER</button>
+      </a>
       <span class="slogan">PLUS CHIC, PLUS RAPIDE, PLUS PROPRE</span>
       <div class="header-wrapper">
         <nav id="menu" class="menu">
@@ -301,9 +301,9 @@
               >L'impact du fret maritime en sans cesse croissance sur la
               pollution mondiale</span
             >
-            <button class="article-link">
-              <a href="article1.html">LIRE</a>
-            </button>
+            <a href="article1.html" class="article-link">
+              <button>LIRE</button>
+            </a>
           </div>
         </div>
         <div class="article-here is-hidden">
