button article link #2 and footer message

--- a/index.html
+++ b/index.html
@@ -318,9 +318,9 @@
               >Les nouvelles mannes de Musk:<br />
               Click n' Boat & Taxi Boat</span
             >
-            <button class="article-link">
-              <a href="article2.html">LIRE</a>
-            </button>
+            <a href="article2.html" class="article-link">
+              <button>LIRE</button>
+            </a>
           </div>
         </div>
       </div>
@@ -368,6 +368,10 @@
           <img src="img/logoytb.png" alt="" />
         </a>
       </div>
+      <span class="footer-message"
+        >ce site a été réalisé dans le cadre d'un travail a but éducatif et non
+        commercial</span
+      >
     </footer>
     <script type="text/javascript" src="js/header.js"></script>
     <script type="text/javascript" src="JS/form.js"></script>
