--- a/index.html
+++ b/index.html
@@ -374,8 +374,8 @@
       >
     </footer>
     <script type="text/javascript" src="js/header.js"></script>
-    <script type="text/javascript" src="JS/form.js"></script>
-    <script type="text/javascript" src="JS/article.js"></script>
-    <script type="text/javascript" src="JS/srcolListener.js"></script>
+    <script type="text/javascript" src="js/form.js"></script>
+    <script type="text/javascript" src="js/article.js"></script>
+    <script type="text/javascript" src="js/srcolListener.js"></script>
   </body>
 </html>
